syntax = "proto3";

package posts;

service GetPosts {
  rpc ListData(Request) returns (stream Data) {}
}

message Request {
  int32 limit = 1;
}

message Data {
  string username = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string title = 5;
  string text = 6;
}
